--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@images/*": ["./public/images/*"],
-      "@cssModule/*": ["./src/components/css/*"]
+      "@/images/*": ["./public/images/*"],
+      "@cssModule/*": ["./src/components/css/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
