--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.9.3",
+    "suneditor": "^2.45.1",
+    "suneditor-react": "^3.6.1",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
